  AdvisingScreen object.  It could be further split out into other files as well.
  
  Adding/Removing Substitutions, and removing courses from a degree plan, appear to be working
  correctly.
  
  Menus can specify a file to load as needed.  Like an additional .inc file where that page_callback is located.


2012-03-10
  Continuing work on making FP more like Drupal.
  
  Created "modules" table to better keep track of modules.
  
  Created student_search module.  Working on bringing in all of its functionality.
  
  Added jquery 1.7.1 instead of 1.3.2.
  
  Added much of the Advise module
  
  Have a new concept of passing around the "current_student_id" from page to page,
  and saving all other "advising variables" to a table, rather than keeping them in the POST
  between every page.  This makes it much more tidy.
  

2012-03-09
  ** BIG CHANGE **
  I ran a script to convert from camelCase to underscore_style.
  Now, only Class names are CamelCased.  Everything else-- variables and methods and functions,
  are all going to be underscore_style (also called K&R or C++ style).
  Even though I think this isn't as pretty, it is consistent, which is what I am more
  concerned about.
  
  Fixed numerous capitalization problems.  I'm sure there's more after this.
  
  Gave important system_settings default values.
  
  Moved functions.php into other .inc files, in a new "includes" directory.


2012-03-08
  Fixed a bug where definitions in groups, once entered could not be removed.
  
  Adjusted default.settings.php file to have error reporting limited by default,
  as well as additional instructions for setting up through Windows.
  
  Added "user_auth" table to flightpath database.  Implemented default login
  attempts to that table (empty it to override and use another method)
   - Created "admin" user by default.  user_id = 1, password = fpadminuser
   
  Made it so the number of courses to load (and cache) on login is configurable
  in the settings.
  